# libhttpserver

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  LIBHTTPSERVER_postBuildPhase.makeDebug  LIBHTTPSERVER_postBuildPhase.makeMinSizeRel  LIBHTTPSERVER_postBuildPhase.makeRelWithDebInfo  LIBHTTPSERVER_postBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
HTTPSERVER.xcodeproj/: project.pbxproj
HTTPSERVER_lib.xcodeproj/: project.pbxproj
main/: CMakeLists.txt  cmake_install.cmake  main.cpp
main/cmake_test.build/Debug/demo.build/: dgph
main/cmake_test.build/Debug/demo.build/Objects-normal/x86_64/: demo.LinkFileList
math/: CMakeLists.txt  add.cpp  add.h  cmake_install.cmake  libmath.dylib
math/CMakeScripts/: math_postBuildPhase.makeDebug  math_postBuildPhase.makeMinSizeRel  math_postBuildPhase.makeRelWithDebInfo  math_postBuildPhase.makeRelease
math/cmake_test.build/Debug/math.build/: Script-4365B8D9CC35489691232BF0.sh  dgph
math/cmake_test.build/Debug/math.build/Objects-normal/x86_64/: math.LinkFileList
utility/: CMakeLists.txt  cmake_install.cmake  libutility.dylib  utils.h
utility/CMakeScripts/: utility_postBuildPhase.makeDebug  utility_postBuildPhase.makeMinSizeRel  utility_postBuildPhase.makeRelWithDebInfo  utility_postBuildPhase.makeRelease
utility/cmake_test.build/Debug/utility.build/: Script-5C4EF22420E54020BACE609E.sh  dgph  dgph~
utility/cmake_test.build/Debug/utility.build/Objects-normal/x86_64/: utility.LinkFileList
